[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Main/Game.gd" type="Script" id=1]
[ext_resource path="res://src/Main/LoginAndRegister.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Menus/Characters/CharacterMenu.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="CharacterMenu" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="login_pressed" from="MainMenu" to="." method="_on_MainMenu_login_pressed"]
[connection signal="register_pressed" from="MainMenu" to="." method="_on_MainMenu_register_pressed"]
